added CRUD api for emergency helpline along with the model